--- a/_data/education.yml
+++ b/_data/education.yml
@@ -1,6 +1,6 @@
 # Degree
 - degree: Full Stack Webdeveloper Nanodegree  
-  uni: Udacity
-  year: June, 2014 &mdash; January, 2015
+  uni: Universitas Negeri Yogyakarta
+  year: June, 2022
   # awards:
-  # summary:
+  summary: a wonderful university
